[package]
name = "async-proto-derive"
version = "0.16.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"
description = "Proc-macros for the async-proto crate"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/fenhl/async-proto"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = ["full"]
