[package]
name = "async-proto-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Proc-macros for the async-proto crate"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/fenhl/async-proto"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.12"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "2"
features = ["full"]
