[package]
name = "async-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Simple async binary network protocols"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/fenhl/async-proto"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
tokio-tungstenite021 = ["dep:tokio-tungstenite021", "dep:futures"]
tokio-tungstenite024 = ["dep:tokio-tungstenite024", "dep:futures"]
tokio-tungstenite028 = ["dep:tokio-tungstenite028", "dep:futures"]
doubloon = ["dep:doubloon", "rust_decimal"]
os_info = ["dep:os_info", "dep:serde_plain"]

[dependencies]
async-proto-derive = { path = "../async-proto-derive", version = "=0.26.10" }
bitvec = { version = "1", optional = true }
byteorder = "1"
bytes = { version = "1", optional = true }
bytesize = { version = "2", optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
chrono-tz = { version = "0.10", optional = true }
doubloon = { version = "0.2.0", optional = true }
either = { version = "1", optional = true }
enumset = { version = "1", optional = true }
fallible_collections = { version = "0.5", features = ["rust_1_57"] }
futures = { version = "0.3", optional = true }
git2 = { version = "0.20", default-features = false, optional = true }
gix-hash = { version = "0.21", optional = true }
hematite-nbt = { version = "0.5.2", default-features = false, optional = true }
noisy_float = { version = "0.2", optional = true }
nonempty-collections = { version = "1.0.0", optional = true }
os_info = { version = "3.14.0", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
semver = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_plain = { version = "1", optional = true }
serenity = { version = "0.12.1", default-features = false, optional = true }
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }
tokio-tungstenite021 = { package = "tokio-tungstenite", version = "0.21", optional = true, features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite024 = { package = "tokio-tungstenite", version = "0.24", optional = true, features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite028 = { package = "tokio-tungstenite", version = "0.28", optional = true, features = ["rustls-tls-webpki-roots"] }
url = { version = "2.5.4", optional = true }
uuid = { version = "1", optional = true }
